compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__ascii_as_unicode_escape_sequence.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\npub fn y() -> String {\n  \"\\u{79}\"\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([y/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec y() -> binary().
y() ->
    <<"\x{79}"/utf8>>.
