compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__assert_const_concat_other_const_concat.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\nconst cute_bee = \"cute\" ++ \"bee\"\nconst cute_cute_bee_buzz = cute_bee ++ \"buzz\"\n\npub fn main() {\n  cute_cute_bee_buzz\n}\n"
---
----- SOURCE CODE

const cute_bee = "cute" ++ "bee"
const cute_cute_bee_buzz = cute_bee ++ "buzz"

pub fn main() {
  cute_cute_bee_buzz
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 5).
-spec main() -> binary().
main() ->
    <<"cute"/utf8, "bee"/utf8, "buzz"/utf8>>.
