compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__assert_string_prefix.snap
---
source: compiler-core/src/erlang/tests/strings.rs
assertion_line: 421
expression: "\npub fn main(x) {\n  let assert \"m-\" ++ rest = x\n  rest\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  let assert "m-" ++ rest = x
  rest
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/1]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main(binary()) -> binary().
main(X) ->
    <<"m-"/utf8, Rest/binary>> = case X of
        <<"m-"/utf8, _/binary>> -> X;
        _assert_fail ->
            erlang:error(#{rakun_error => let_assert,
                        message => <<"Pattern match failed, no pattern matched the value."/utf8>>,
                        value => _assert_fail,
                        module => <<"my/mod"/utf8>>,
                        function => <<"main"/utf8>>,
                        line => 3})
    end,
    Rest.
