compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__concat.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\npub fn go(x, y) {\n  x ++ y\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([go/2]).

-file("/root/project/test/my/mod.rakun", 2).
-spec go(binary(), binary()) -> binary().
go(X, Y) ->
    <<X/binary, Y/binary>>.
