compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__concat_3_variables.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\npub fn go(x, y, z) {\n  x ++ y ++ z\n}\n"
---
----- SOURCE CODE

pub fn go(x, y, z) {
  x ++ y ++ z
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([go/3]).

-file("/root/project/test/my/mod.rakun", 2).
-spec go(binary(), binary(), binary()) -> binary().
go(X, Y, Z) ->
    <<<<X/binary, Y/binary>>/binary, Z/binary>>.
