compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__concat_constant_fn.snap
---
source: compiler-core/src/erlang/tests/strings.rs
assertion_line: 389
expression: "\nconst cs = s\n\nfn s() {\n  \"s\"\n}\n\npub fn go() {\n  cs() ++ cs()\n}\n"
---
----- SOURCE CODE

const cs = s

fn s() {
  "s"
}

pub fn go() {
  cs() ++ cs()
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([go/0]).

-file("/root/project/test/my/mod.rakun", 4).
-spec s() -> binary().
s() ->
    <<"s"/utf8>>.

-file("/root/project/test/my/mod.rakun", 8).
-spec go() -> binary().
go() ->
    <<(s())/binary, (s())/binary>>.
