compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__concat_function_call.snap
---
source: compiler-core/src/erlang/tests/strings.rs
assertion_line: 360
expression: "\nfn x() {\n  \"\"\n}\n\npub fn go() {\n  x() ++ x()\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([go/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec x() -> binary().
x() ->
    <<""/utf8>>.

-file("/root/project/test/my/mod.rakun", 6).
-spec go() -> binary().
go() ->
    <<(x())/binary, (x())/binary>>.
