compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__discard_concat_rest_pattern.snap
---
source: compiler-core/src/erlang/tests/strings.rs
assertion_line: 335
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" ++ _ -> Nil\n    _ -> Nil\n  }\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([go/1]).

-file("/root/project/test/my/mod.rakun", 2).
-spec go(binary()) -> nil.
go(X) ->
    case X of
        <<"Hello, "/utf8, _/binary>> ->
            nil;

        _ ->
            nil
    end.
