compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__strings__not_unicode_escape_sequence.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\npub fn not_unicode_escape_sequence() -> String {\n  \"\\\\u{03a9}\"\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([not_unicode_escape_sequence/0]).

-file("/root/project/test/my/mod.rakun", 2).
-spec not_unicode_escape_sequence() -> binary().
not_unicode_escape_sequence() ->
    <<"\\u{03a9}"/utf8>>.
